--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,16 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Practica3" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/purple_primary</item>
+        <item name="colorPrimaryDark">@color/purple_primary_dark</item>
+        <item name="colorAccent">@color/purple_accent</item>
+        <item name="android:statusBarColor">@color/purple_primary_dark</item>
+        <item name="android:windowBackground">@color/background_light</item>
+        
+        <!-- Personalizar menú popup con texto oscuro -->
+        <item name="actionOverflowMenuStyle">@style/Widget.App.PopupMenu</item>
+        <item name="textAppearanceLargePopupMenu">@style/PopupMenuTextAppearance</item>
+        <item name="textAppearanceSmallPopupMenu">@style/PopupMenuTextAppearance</item>
     </style>
 
     <style name="Theme.Practica3" parent="Base.Theme.Practica3" />
@@ -11,5 +20,12 @@
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/scale_fade_in</item>
         <item name="android:windowExitAnimation">@anim/fade_out</item>
+    </style>
+    
+    <!-- Estilo para menú popup mejorado -->
+    <style name="Widget.App.PopupMenu" parent="Widget.Material3.PopupMenu.Overflow">
+        <item name="android:popupBackground">@drawable/popup_menu_background</item>
+        <item name="android:popupElevation">8dp</item>
+        <item name="android:dropDownVerticalOffset">4dp</item>
     </style>
 </resources>
